# pinocchio-star-frame

./: Cargo.toml  README.md  rust-toolchain.toml
star_frame/: Cargo.toml
star_frame/src/: errors.rs  lib.rs  prelude.rs
star_frame/src/account_set/: seeded.rs
star_frame/src/instruction/: mod.rs  no_op.rs  un_callable.rs
star_frame_cli/: Cargo.toml
star_frame_cli/src/: main.rs  new_project.rs
star_frame_cli/src/template/: README.md  cargo_toml  counter_test_rs  lib_rs  readme_md
star_frame_idl/: Cargo.toml
star_frame_proc/: Cargo.toml  get_seed.rs  instruction_set.rs
star_frame_proc/src/: lib.rs
star_frame_spl/: Cargo.toml
star_frame_spl/src/: associated_token.rs  pod.rs
star_frame_spl/src/token/: instructions.rs  state.rs
