[workspace]
resolver = "3"
members = ["star_*"]

[workspace.package]
version = "0.26.1"
edition = "2021"
publish = true
rust-version = "1.84.1"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star_frame"

[workspace.dependencies]
# Keep the version in sync with the workspace.package.version
star_frame = { path = "star_frame", version = "0.26.1" }
star_frame_idl = { path = "star_frame_idl", version = "0.26.1" }
star_frame_spl = { path = "star_frame_spl", version = "0.26.1" }
star_frame_proc = { path = "star_frame_proc", version = "0.26.1" }


[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1