[workspace]
resolver = "3"
members = ["star_*"]

[workspace.package]
version = "0.26.1"
edition = "2021"
publish = true
rust-version = "1.84.1"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star_frame"

[workspace.dependencies]
# Keep the version in sync with the workspace.package.version
star_frame = { path = "star_frame", version = "0.26.1" }
star_frame_idl = { path = "star_frame_idl", version = "0.26.1" }
star_frame_spl = { path = "star_frame_spl", version = "0.26.1" }
star_frame_proc = { path = "star_frame_proc", version = "0.26.1" }
pinocchio = { version = "0.9.2", features = ["std"] }
bytemuck = { version = "^1.22.0", features = ["extern_crate_std", "min_const_generics", "derive"] }
borsh = { version = "1.5.7", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
solana-pubkey = "3.0.0"
convert_case = "0.8.0"


[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1