[package]
name = "star_frame"
description = "A high performance Solana framework for building fast, scalable, and secure smart contracts."
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]

[dependencies]

[dev-dependencies]
