[package]
name = "star_frame"
description = "A high performance Solana framework for building fast, scalable, and secure smart contracts."
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
cleanup_rent_warning = []
#idl = ["star_frame_idl", "serde_json"]
test_helpers = []

[dependencies]
pinocchio = { workspace = true }
bytemuck = { workspace = true }
borsh = { workspace = true }
star_frame_proc = { workspace = true }

[dev-dependencies]
