[package]
name = "star_frame_spl"
description = "Star Frame clients and utilities for SPL programs"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["token"]
token = []
# idl = ["star_frame/idl"]

[dependencies]
star_frame.workspace = true

[dev-dependencies]